画像を挿入。全体的に中央寄せにしている途中。

--- a/index.html
+++ b/index.html
@@ -12,9 +12,19 @@
         text-align: center;
       }
       .main {
+        width: 900px;
+        align: center;
+        text-align: center;
+        margin-right:auto;
+        margin-left:auto;
         background-color: #555555;
         border-top: solid 20px #009955;
         border-bottom: solid 20px #009955;
+      }
+      img {
+        width: 900px;
+        max-width: 100%;
+        height: auto;
       }
       h2 {
         color: orange;
@@ -33,6 +43,9 @@
       <h2>H2の見出し</h2>
       <p>これは文章中でも特に<span class="light">協調したい</span>ところ</p>
       <p><a href="https://yahoo.co.jp">yahooへのリンクも貼ってみる</a></p>
+    </div>
+    <div class="image">
+      <img src="./img/fibonacci.gif" alt＝”フィボナッチ”>
     </div>
   </body>
 </html>
