fontAwsome入れたりフォントのスタイル指定したりした

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <title>HTMLの書き方</title>
     <style>
       body {
+        font-family: 'Arial',YuGothic,'Yu Gothic','Hiragino Kaku Gothic ProN','ヒラギノ角ゴ ProN W3','メイリオ', Meiryo,'ＭＳ ゴシック',serif;
+        line-height: 1.5;
         color: gray;
+
       }
       #headline {
         color: orange;
@@ -32,7 +35,14 @@
       .main p span {
         color: red;
       }
+      .my-orange{
+        color: orange;
+      }
+      .my-aqua{
+        color: aqua;
+      }
     </style>
+    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
   </head>
   <body>
     <div id="headline">
@@ -41,7 +51,13 @@
     </div>
     <div class="main">
       <h2>H2の見出し</h2>
-      <p>これは文章中でも特に<span class="light">協調したい</span>ところ</p>
+      <p>これは文章中でも特に<span class="light">強調したい</span>ところ</p>
+      <p>
+        <i class="fas fa-basketball-ball fa-3x"></i>
+        <i class="fas fa-basketball-ball my-orange fa-spin fa-3x"></i>
+        <i class="fas fa-basketball-ball my-aqua fa-3x"></i>
+      </p>
+      <p><b>太字にする</b></p>
       <p><a href="https://yahoo.co.jp">yahooへのリンクも貼ってみる</a></p>
     </div>
     <div class="image">
