リストを作ってみたけど番号が振られないことがある

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <title>HTMLの書き方</title>
-    <style>
+<!--    <style>
       body {
         font-family: 'Arial',YuGothic,'Yu Gothic','Hiragino Kaku Gothic ProN','ヒラギノ角ゴ ProN W3','メイリオ', Meiryo,'ＭＳ ゴシック',serif;
         line-height: 1.5;
         color: gray;
-
+        text-align: center;
       }
       #headline {
         color: orange;
@@ -16,10 +16,9 @@
       }
       .main {
         width: 900px;
-        align: center;
-        text-align: center;
+/*        text-align: center;*/
         margin-right:auto;
-        margin-left:auto;
+        margin-left:auto; 
         background-color: #555555;
         border-top: solid 20px #009955;
         border-bottom: solid 20px #009955;
@@ -42,6 +41,7 @@
         color: aqua;
       }
     </style>
+  -->
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
   </head>
   <body>
@@ -60,6 +60,16 @@
       <p><b>太字にする</b></p>
       <p><a href="https://yahoo.co.jp">yahooへのリンクも貼ってみる</a></p>
     </div>
+      <ol>
+        <li>箇条書き項番付き</li>
+        <li>こういった</li>
+        <li>リストを作る</li>
+      </ol>
+      <ul>
+        <li>項番なしの箇条書き</li>
+        <li>このように</li>
+        <li>するとよいらしい</li>
+      </ul>
     <div class="image">
       <img src="./img/fibonacci.gif" alt＝”フィボナッチ”>
     </div>
