--- a/index.html
+++ b/index.html
@@ -2,68 +2,9 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="base.css">
     <title>HTMLの書き方</title>
-<!--    <style>
-      body {
-        font-family: 'Arial',YuGothic,'Yu Gothic','Hiragino Kaku Gothic ProN','ヒラギノ角ゴ ProN W3','メイリオ', Meiryo,'ＭＳ ゴシック',serif;
-        line-height: 1.5;
-        color: gray;
-        text-align: center;
-      }
-      #headline {
-        color: orange;
-        text-align: center;
-      }
-      .main {
-        width: 900px;
-        margin-right:auto;
-        margin-left:auto; 
-        background-color: #555555;
-        border-top: solid 20px #009955;
-        border-bottom: solid 20px #009955;
-      }
 
-      .explain {
-        position: relative;
-        padding: 0;
-      }
-      .explain span {
-        position: absolute;
-        bottom: 0;
-        right: 0;
-        color: white;
-        background: #74c1f8;
-        padding:0 2px;
-        line-height:1.5;
-      }
-
-      #fixed {
-        position: fixed;
-        top: 0;
-        left: 0;
-        margin: 0;
-        width: 5%;
-      }
-      
-      img {
-        width: 900px;
-        max-width: 100%;
-        height: auto;
-      }
-      h2 {
-        color: orange;
-      }
-      .main p span {
-        color: red;
-      }
-      .my-orange{
-        color: orange;
-      }
-      .my-aqua{
-        color: aqua;
-      }
-    </style>
-  -->
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
   </head>
   <body>
