scss化とテーブルを作成

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="base.css">
-    <title>HTMLの書き方</title>
+    <link rel="stylesheet" href="assets/css/main.css">
+    <title>45番実験室</title>
 
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
   </head>
@@ -12,7 +12,7 @@
       <img src="./img/cardboardbox-1.png" alt="段ボール箱">
     </p>
     <div id="headline">
-      <h1>HTMLの書き方</h1>
+      <h1>45番実験室</h1>
       <p>ここから始めるHTML</p>
     </div>
     <div class="main">
@@ -39,6 +39,23 @@
     <div class="image">
       <img src="./img/fibonacci.gif" alt="フィボナッチ">
       <span>黄金螺旋</span>
+    </div>
+    <div class="table01">
+      <p>テーブルを作っていく</p>
+      <table>
+        <tr>
+          <th>事象１</th><th>事象２</th><th>事象３</th>
+        </tr>
+        <tr>
+          <td>３</td><td>１</td><td>２</td>
+        </tr>
+        <tr>
+          <td>１</td><td>３</td><td>２</td>
+        </tr>
+        <tr>
+          <td>３</td><td>２</td><td>１</td>
+        </tr>
+      </table>
     </div>
   </body>
 </html>
