テーブルを装飾

--- a/index.html
+++ b/index.html
@@ -44,16 +44,19 @@
       <p>テーブルを作っていく</p>
       <table>
         <tr>
-          <th>事象１</th><th>事象２</th><th>事象３</th>
+          <th colspan=4>いつやるんですか？</th>
         </tr>
         <tr>
-          <td>３</td><td>１</td><td>２</td>
+          <th>担当</th><th>事象１</th><th>事象２</th><th>事象３</th>
         </tr>
-        <tr>
-          <td>１</td><td>３</td><td>２</td>
+        <tr class="odd">
+          <td>担当A</td><td>今日やる</td><td>明日やる</td><td>やらない</td>
         </tr>
-        <tr>
-          <td>３</td><td>２</td><td>１</td>
+        <tr class="even">
+          <td>担当B</td><td>できたらやる</td><td>できたらやる</td><td>無理</td>
+        </tr>
+        <tr class="odd">
+          <td>担当C</td><td>やる</td><td>やる</td><td>やる</td>
         </tr>
       </table>
     </div>
