疑似要素で見出しの前にFontAwesomeのアイコンを表示させた

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" href="assets/css/main.css">
     <title>45番実験室</title>
 
-    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css">
+
   </head>
   <body>
     <p id="fixed">
@@ -26,22 +27,26 @@
       <p><b>太字にする</b></p>
       <p><a href="https://yahoo.co.jp">yahooへのリンクも貼ってみる</a></p>
     </div>
+    <h2>リストを作る</h2>
+    <h3>ordered list 項番付きの箇条書き</h3>
       <ol>
         <li>箇条書き項番付き</li>
         <li>こういった</li>
         <li>リストを作る</li>
       </ol>
+    <h3>unorderd list 項番無しの箇条書き</h3>
       <ul>
         <li>項番なしの箇条書き</li>
         <li>このように</li>
         <li>するとよいらしい</li>
       </ul>
+    <h2>画像を表示する</h2>
     <div class="image">
       <img src="./img/fibonacci.gif" alt="フィボナッチ">
       <span>黄金螺旋</span>
     </div>
     <div class="table01">
-      <p>テーブルを作っていく</p>
+      <h2>テーブルを作っていく</h2>
       <table>
         <tr>
           <th colspan=4>いつやるんですか？</th>
