疑似要素で引用スタイルを設定

--- a/index.html
+++ b/index.html
@@ -65,5 +65,11 @@
         </tr>
       </table>
     </div>
+    <h2>引用ボックスを作る</h2>
+    <blockquote>
+        一般に蝙蝠の空中揚力の強さは知られるところであるが、中国河南省山奥に生息する攣鵠蝙蝠はその揚力が５キロもあるといわれる。元朝中期、青巾族の乱の折り、元軍の都尉・安史明はこの蝙蝠２０匹を使い、万里の長城を越え敵を攪乱することに成功したという。
+        これを応用し、多彩な変化技を加えて成立したのが乖宙浮遊體であり、 怪拳として世に恐れられた。</br>
+        民明書房刊『実用動物辞典』より
+    </blockquote>
   </body>
 </html>
